...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2aV-no-u9I">
                                                        <rect key="frame" x="183" y="0.0" width="52" height="28.5"/>
                                                        <state key="normal" title="Sign up">
                                                            <color key="titleColor" systemColor="systemGreenColor"/>
                                                        </state>
...
                                                            <constraint firstAttribute="height" constant="50" id="HBj-3H-fNq"/>
                                                        </constraints>
                                                        <state key="normal" title="Manager">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                            <constraint firstAttribute="height" constant="50" id="Gad-Vp-ek9"/>
                                        </constraints>
                                        <state key="normal" title="Create Account">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name.." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KbV-lB-Hdr">
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                        <rect key="frame" x="0.0" y="74" width="378" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name.." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vjk-NE-B8N">
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                        <rect key="frame" x="0.0" y="148" width="378" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="USC Email.." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I8z-FK-d8w">
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                        <rect key="frame" x="0.0" y="222" width="378" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password.." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QfN-m1-3wk">
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                        <rect key="frame" x="0.0" y="296" width="378" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password.." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Eof-4J-gjp">
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <color key="tintColor" systemColor="systemGreenColor"/>
...
